--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,7 @@
     "dev": "node ./scripts/run-next.mjs dev",
     "build": "next build",
     "start": "node ./scripts/run-next.mjs start",
-    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write \"**/*.{js,ts,tsx,jsx,json,md,css}\"",
     "test": "vitest run --passWithNoTests",
     "test:watch": "vitest --watch --passWithNoTests",
@@ -69,6 +69,8 @@
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.1",
     "eslint": "^9.13.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.13.0",
     "eslint-config-next": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.14.3",
