add:news fix image

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,10 @@ MINIO_ACCESS_KEY=miniouser
 MINIO_SECRET_KEY=miniopassword
 MINIO_BUCKET=upload
 MINIO_REGION=us-east-1
+MINIO_PUBLIC_ENDPOINT=localhost
+MINIO_PUBLIC_PORT=6204
+MINIO_PUBLIC_USE_SSL=false
+MINIO_PUBLIC_PATH=/storage
 
 OTEL_ENABLED=false
 OTEL_SERVICE_NAME=my-ads-api
