--- a/.env.prod
+++ b/.env.prod
@@ -36,9 +36,10 @@ MINIO_CONSOLE_PORT=6305
 MINIO_USE_SSL=false
 MINIO_BUCKET=mahan-file-uploads
 MINIO_REGION=ir-tehran-1
-MINIO_PUBLIC_ENDPOINT=storage.mahanfile.com
+MINIO_PUBLIC_ENDPOINT=mahanfile.com
 MINIO_PUBLIC_PORT=443
 MINIO_PUBLIC_USE_SSL=true
+MINIO_PUBLIC_PATH=/storage
 
 CORS_ORIGIN=https://mahanmelk.com
 RATE_LIMIT_TTL=60
