--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -139,6 +139,7 @@ services:
       MINIO_PUBLIC_ENDPOINT: ${MINIO_PUBLIC_ENDPOINT}
       MINIO_PUBLIC_PORT: ${MINIO_PUBLIC_PORT}
       MINIO_PUBLIC_USE_SSL: ${MINIO_PUBLIC_USE_SSL}
+      MINIO_PUBLIC_PATH: ${MINIO_PUBLIC_PATH}
       OTEL_ENABLED: ${OTEL_ENABLED}
       OTEL_SERVICE_NAME: ${OTEL_SERVICE_NAME}
       OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT}
@@ -214,6 +215,7 @@ services:
       MINIO_PUBLIC_ENDPOINT: ${MINIO_PUBLIC_ENDPOINT}
       MINIO_PUBLIC_PORT: ${MINIO_PUBLIC_PORT}
       MINIO_PUBLIC_USE_SSL: ${MINIO_PUBLIC_USE_SSL}
+      MINIO_PUBLIC_PATH: ${MINIO_PUBLIC_PATH}
       OTEL_ENABLED: ${OTEL_ENABLED}
       OTEL_SERVICE_NAME: ${OTEL_SERVICE_NAME}
       OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT}
@@ -433,6 +435,7 @@ services:
       MINIO_PUBLIC_ENDPOINT: ${MINIO_PUBLIC_ENDPOINT}
       MINIO_PUBLIC_PORT: ${MINIO_PUBLIC_PORT}
       MINIO_PUBLIC_USE_SSL: ${MINIO_PUBLIC_USE_SSL}
+      MINIO_PUBLIC_PATH: ${MINIO_PUBLIC_PATH}
       OTEL_ENABLED: ${OTEL_ENABLED}
       OTEL_SERVICE_NAME: ${OTEL_SERVICE_NAME}
       OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT}
