add:news news crawler - improve news admin

--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,8 @@
     "arka:fetch": "dotenv -e ../.env -- ts-node -r tsconfig-paths/register ./src/scripts/run-arka-phone-fetch.ts",
     "arka:transfer": "dotenv -e ../.env -- ts-node -r tsconfig-paths/register ./src/scripts/run-arka-phone-transfer.ts",
     "news:crawl:eghtesad": "dotenv -e ../.env -- ts-node -r tsconfig-paths/register ./src/scripts/run-eghtesad-housing-crawl.ts",
+    "news:crawl:khabaronline": "dotenv -e ../.env -- ts-node -r tsconfig-paths/register ./src/scripts/run-khabaronline-housing-crawl.ts",
+    "news:crawl:asriran": "dotenv -e ../.env -- ts-node -r tsconfig-paths/register ./src/scripts/run-asriran-housing-crawl.ts",
     "telegram:bot": "dotenv -e ../.env -- ts-node -r tsconfig-paths/register ./src/scripts/run-telegram-bot.ts",
     "telegram:bot:dev": "dotenv -e ../.env -- ts-node-dev --respawn -r tsconfig-paths/register ./src/scripts/run-telegram-bot.ts",
     "prepare": "husky install",
@@ -80,10 +82,12 @@
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.2.4",
+    "cheerio": "^1.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie": "^1.0.2",
     "dotenv": "^17.2.3",
+    "fast-xml-parser": "^5.3.3",
     "fastify": "^5.6.1",
     "helmet": "^8.1.0",
     "ioredis": "^5.4.1",
