--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,13 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.0.7",
     "@hookform/resolvers": "^3.9.0",
+    "@lexical/html": "^0.39.0",
+    "@lexical/link": "^0.39.0",
+    "@lexical/list": "^0.39.0",
+    "@lexical/react": "^0.39.0",
+    "@lexical/rich-text": "^0.39.0",
+    "@lexical/code": "^0.39.0",
+    "@lexical/selection": "^0.39.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -34,6 +41,7 @@
     "framer-motion": "^12.0.1",
     "maplibre-gl": "^4.7.1",
     "lucide-react": "^0.435.0",
+    "lexical": "^0.39.0",
     "next": "^16.0.1",
     "next-intl": "^3.17.1",
     "react": "^19.0.0",
