--- a/ui/package.json
+++ b/ui/package.json
@@ -50,6 +50,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.2",
     "socket.io-client": "^4.8.1",
+    "swiper": "^11.1.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
