--- a/.env.prod
+++ b/.env.prod
@@ -23,11 +23,12 @@ REDIS_KEY_PREFIX=mahan-file:
 
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_QUEUE_PREFIX=mahan-file
-RABBITMQ_PREFETCH=25
+RABBITMQ_PREFETCH=5
 RABBITMQ_HEARTBEAT=60
 RABBITMQ_RECONNECT_SECONDS=5
 RABBITMQ_PORT=6313
 RABBITMQ_MANAGEMENT_PORT=6314
+RABBITMQ_MANAGEMENT_URL=http://rabbitmq:15672
 RABBITMQ_USERNAME=mahan_worker
 
 MINIO_ENDPOINT=minio
@@ -66,12 +67,17 @@ NEXT_PUBLIC_VAPID_PUBLIC_KEY=BJPGr5VE7KBZI1r6zo6kQM8LF9MllmtfnyI65mrH9MZ-MmRVvDr
 
 NOTIFICATION_WINDOW_MINUTES=10
 NOTIFICATION_SCAN_BATCH_SIZE=50
-NOTIFICATION_RETRY_INTERVAL_MS=180000
+NOTIFICATION_RETRY_INTERVAL_MS=30000
 NOTIFICATION_MAX_ATTEMPTS=3
 NOTIFICATION_RETENTION_DAYS=3
+NOTIFICATION_PUSH_ALWAYS=true
 VAPID_PUBLIC_KEY=BJPGr5VE7KBZI1r6zo6kQM8LF9MllmtfnyI65mrH9MZ-MmRVvDr-dpgp0T4L7ornd-Trwb2VSi6MQgjrmHI0o2Q
 VAPID_PRIVATE_KEY=5cUm6OFWaKk4ITc0UZAb6yp5TgGiondO0CCV-chTWEc
 VAPID_SUBJECT=mailto:admin@example.com
+PUSH_NOTIFICATION_TIMEOUT_MS=8000
+TELEGRAM_SEND_TIMEOUT_MS=8000
+TELEGRAM_SEND_RETRY_ATTEMPTS=5
+TELEGRAM_SEND_RETRY_DELAY_MS=5000
 
 # Image references are now fixed in docker-compose-prod.yml and always pull latest tags from GHCR.
 # Keep these here only as documentation / future overrides.
