fix: PRODUCTION NOTIFICATION PROBLEM

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -128,6 +128,10 @@ services:
       RABBITMQ_PREFETCH: ${RABBITMQ_PREFETCH}
       RABBITMQ_HEARTBEAT: ${RABBITMQ_HEARTBEAT}
       RABBITMQ_RECONNECT_SECONDS: ${RABBITMQ_RECONNECT_SECONDS}
+      VAPID_PUBLIC_KEY: ${VAPID_PUBLIC_KEY}
+      VAPID_PRIVATE_KEY: ${VAPID_PRIVATE_KEY}
+      VAPID_SUBJECT: ${VAPID_SUBJECT}
+      PUSH_NOTIFICATION_TIMEOUT_MS: ${PUSH_NOTIFICATION_TIMEOUT_MS}
       MINIO_ENDPOINT: ${MINIO_ENDPOINT}
       MINIO_PORT: ${MINIO_PORT}
       MINIO_CONSOLE_PORT: ${MINIO_CONSOLE_PORT}
@@ -204,6 +208,10 @@ services:
       RABBITMQ_PREFETCH: ${RABBITMQ_PREFETCH}
       RABBITMQ_HEARTBEAT: ${RABBITMQ_HEARTBEAT}
       RABBITMQ_RECONNECT_SECONDS: ${RABBITMQ_RECONNECT_SECONDS}
+      VAPID_PUBLIC_KEY: ${VAPID_PUBLIC_KEY}
+      VAPID_PRIVATE_KEY: ${VAPID_PRIVATE_KEY}
+      VAPID_SUBJECT: ${VAPID_SUBJECT}
+      PUSH_NOTIFICATION_TIMEOUT_MS: ${PUSH_NOTIFICATION_TIMEOUT_MS}
       MINIO_ENDPOINT: ${MINIO_ENDPOINT}
       MINIO_PORT: ${MINIO_PORT}
       MINIO_CONSOLE_PORT: ${MINIO_CONSOLE_PORT}
@@ -415,6 +423,10 @@ services:
       RABBITMQ_PREFETCH: ${RABBITMQ_PREFETCH}
       RABBITMQ_HEARTBEAT: ${RABBITMQ_HEARTBEAT}
       RABBITMQ_RECONNECT_SECONDS: ${RABBITMQ_RECONNECT_SECONDS}
+      VAPID_PUBLIC_KEY: ${VAPID_PUBLIC_KEY}
+      VAPID_PRIVATE_KEY: ${VAPID_PRIVATE_KEY}
+      VAPID_SUBJECT: ${VAPID_SUBJECT}
+      PUSH_NOTIFICATION_TIMEOUT_MS: ${PUSH_NOTIFICATION_TIMEOUT_MS}
       JWT_ACCESS_TOKEN_SECRET: ${JWT_ACCESS_TOKEN_SECRET:?JWT_ACCESS_TOKEN_SECRET not set}
       JWT_REFRESH_TOKEN_SECRET: ${JWT_REFRESH_TOKEN_SECRET:?JWT_REFRESH_TOKEN_SECRET not set}
       JWT_ACCESS_TOKEN_TTL: ${JWT_ACCESS_TOKEN_TTL}
@@ -467,6 +479,7 @@ services:
       PORT: ${NEXT_UI_PORT}
       NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL}
       NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
+      NEXT_PUBLIC_VAPID_PUBLIC_KEY: ${NEXT_PUBLIC_VAPID_PUBLIC_KEY}
       NEXT_PUBLIC_ANALYTICS_WRITE_KEY: ${NEXT_PUBLIC_ANALYTICS_WRITE_KEY}
     depends_on:
       - api
