--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -417,8 +417,13 @@ jobs:
           GRAFANA_ADMIN_PASSWORD: ${{ secrets.GRAFANA_ADMIN_PASSWORD }}
           GRAFANA_ADMIN_USER: ${{ vars.GRAFANA_ADMIN_USER }}
           GRAFANA_ADMIN_EMAIL: ${{ vars.GRAFANA_ADMIN_EMAIL }}
+          VAPID_PUBLIC_KEY: ${{ secrets.VAPID_PUBLIC_KEY || vars.VAPID_PUBLIC_KEY }}
+          VAPID_PRIVATE_KEY: ${{ secrets.VAPID_PRIVATE_KEY || vars.VAPID_PRIVATE_KEY }}
+          VAPID_SUBJECT: ${{ secrets.VAPID_SUBJECT || vars.VAPID_SUBJECT }}
+          NEXT_PUBLIC_VAPID_PUBLIC_KEY: ${{ secrets.NEXT_PUBLIC_VAPID_PUBLIC_KEY || vars.NEXT_PUBLIC_VAPID_PUBLIC_KEY }}
+          PUSH_NOTIFICATION_TIMEOUT_MS: ${{ vars.PUSH_NOTIFICATION_TIMEOUT_MS || secrets.PUSH_NOTIFICATION_TIMEOUT_MS }}
         run: |
-          required_vars=(STACK_NAME GHCR_TOKEN POSTGRES_PASSWORD MINIO_ACCESS_KEY MINIO_SECRET_KEY JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET RABBITMQ_PASSWORD TELEGRAM_BOT_TOKEN GRAFANA_ADMIN_PASSWORD GRAFANA_ADMIN_USER GRAFANA_ADMIN_EMAIL)
+          required_vars=(STACK_NAME GHCR_TOKEN POSTGRES_PASSWORD MINIO_ACCESS_KEY MINIO_SECRET_KEY JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET RABBITMQ_PASSWORD TELEGRAM_BOT_TOKEN GRAFANA_ADMIN_PASSWORD GRAFANA_ADMIN_USER GRAFANA_ADMIN_EMAIL VAPID_PUBLIC_KEY VAPID_PRIVATE_KEY VAPID_SUBJECT NEXT_PUBLIC_VAPID_PUBLIC_KEY PUSH_NOTIFICATION_TIMEOUT_MS)
           missing=0
           for name in "${required_vars[@]}"; do
             if [ -z "${!name}" ]; then
@@ -467,6 +472,11 @@ jobs:
           # Let compose defaults handle DIRECT_URL unless you need a separate endpoint
           NEXT_PUBLIC_ANALYTICS_WRITE_KEY: ${{ secrets.NEXT_PUBLIC_ANALYTICS_WRITE_KEY }}
           OTEL_EXPORTER_OTLP_HEADERS: ${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}
+          VAPID_PUBLIC_KEY: ${{ secrets.VAPID_PUBLIC_KEY || vars.VAPID_PUBLIC_KEY }}
+          VAPID_PRIVATE_KEY: ${{ secrets.VAPID_PRIVATE_KEY || vars.VAPID_PRIVATE_KEY }}
+          VAPID_SUBJECT: ${{ secrets.VAPID_SUBJECT || vars.VAPID_SUBJECT }}
+          NEXT_PUBLIC_VAPID_PUBLIC_KEY: ${{ secrets.NEXT_PUBLIC_VAPID_PUBLIC_KEY || vars.NEXT_PUBLIC_VAPID_PUBLIC_KEY }}
+          PUSH_NOTIFICATION_TIMEOUT_MS: ${{ vars.PUSH_NOTIFICATION_TIMEOUT_MS || secrets.PUSH_NOTIFICATION_TIMEOUT_MS }}
           APP_PORT: ${{ vars.APP_PORT }}
           APP_GLOBAL_PREFIX: ${{ vars.APP_GLOBAL_PREFIX }}
           POSTGRES_DB: ${{ vars.POSTGRES_DB }}
