--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -144,6 +144,8 @@ services:
       MINIO_PUBLIC_PORT: ${MINIO_PUBLIC_PORT}
       MINIO_PUBLIC_USE_SSL: ${MINIO_PUBLIC_USE_SSL}
       MINIO_PUBLIC_PATH: ${MINIO_PUBLIC_PATH}
+      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL}
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
       OTEL_ENABLED: ${OTEL_ENABLED}
       OTEL_SERVICE_NAME: ${OTEL_SERVICE_NAME}
       OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT}
