--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -26,6 +26,8 @@ ARG MINIO_ACCESS_KEY=""
 ARG MINIO_SECRET_KEY=""
 ARG MINIO_BUCKET=""
 ARG MINIO_REGION=""
+ARG NEXT_PUBLIC_APP_URL=""
+ARG NEXT_PUBLIC_API_BASE_URL=""
 ARG OTEL_ENABLED=""
 ARG OTEL_EXPORTER_OTLP_ENDPOINT=""
 ARG OTEL_EXPORTER_OTLP_HEADERS=""
@@ -50,6 +52,8 @@ ENV MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
 ENV MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
 ENV MINIO_BUCKET=${MINIO_BUCKET}
 ENV MINIO_REGION=${MINIO_REGION}
+ENV NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
+ENV NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
 ENV OTEL_ENABLED=${OTEL_ENABLED}
 ENV OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
 ENV OTEL_EXPORTER_OTLP_HEADERS=${OTEL_EXPORTER_OTLP_HEADERS}
@@ -83,6 +87,8 @@ ARG MINIO_ACCESS_KEY=""
 ARG MINIO_SECRET_KEY=""
 ARG MINIO_BUCKET=""
 ARG MINIO_REGION=""
+ARG NEXT_PUBLIC_APP_URL=""
+ARG NEXT_PUBLIC_API_BASE_URL=""
 ARG OTEL_ENABLED=""
 ARG OTEL_EXPORTER_OTLP_ENDPOINT=""
 ARG OTEL_EXPORTER_OTLP_HEADERS=""
@@ -107,6 +113,8 @@ ENV MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
 ENV MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
 ENV MINIO_BUCKET=${MINIO_BUCKET}
 ENV MINIO_REGION=${MINIO_REGION}
+ENV NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
+ENV NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
 ENV OTEL_ENABLED=${OTEL_ENABLED}
 ENV OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
 ENV OTEL_EXPORTER_OTLP_HEADERS=${OTEL_EXPORTER_OTLP_HEADERS}
