fix:  max connection error

--- a/.env.prod
+++ b/.env.prod
@@ -14,6 +14,7 @@ POSTGRES_DB=mahan_file
 POSTGRES_USER=mahan_admin
 POSTGRES_INTERNAL_PORT=5432
 POSTGRES_PUBLISHED_PORT=6301
+POSTGRES_MAX_CONNECTIONS=200
 
 REDIS_HOST=redis
 REDIS_PORT=6302
