fix: add automated backup

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,12 @@ MINIO_PUBLIC_PORT=6204
 MINIO_PUBLIC_USE_SSL=false
 MINIO_PUBLIC_PATH=/storage
 
+BACKUP_TZ=Asia/Tehran
+BACKUP_CRON=0 2 * * *
+BACKUP_TELEGRAM_PHONES=+989038923989,+989195043739
+PGBACKREST_STANZA=my-ads
+PGBACKREST_REPO1_S3_VERIFY_TLS=n
+
 OTEL_ENABLED=false
 OTEL_SERVICE_NAME=my-ads-api
 OTEL_EXPORTER_OTLP_ENDPOINT=http://host.docker.internal:6207/v1/traces
