--- a/.env.prod
+++ b/.env.prod
@@ -43,6 +43,12 @@ MINIO_PUBLIC_PORT=443
 MINIO_PUBLIC_USE_SSL=true
 MINIO_PUBLIC_PATH=/storage
 
+BACKUP_TZ=Asia/Tehran
+BACKUP_CRON=0 2 * * *
+BACKUP_TELEGRAM_PHONES=+989038923989,+989195043739
+PGBACKREST_STANZA=my-ads
+PGBACKREST_REPO1_S3_VERIFY_TLS=n
+
 CORS_ORIGIN=https://mahanmelk.com
 RATE_LIMIT_TTL=60
 RATE_LIMIT_MAX=240
