--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
   postgres:
     image: postgres:16-alpine
     restart: unless-stopped
+    entrypoint:
+      - /usr/local/bin/pgbackrest-entrypoint.sh
     profiles:
       - minimal
       - full
@@ -14,11 +16,46 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       PGPORT: ${POSTGRES_PORT:-6201}
+      PGBACKREST_STANZA: ${PGBACKREST_STANZA:-my-ads}
+      PGBACKREST_PG1_PATH: /var/lib/postgresql/data
+      PGBACKREST_PG1_PORT: ${POSTGRES_PORT:-6201}
+      PGBACKREST_PG1_SOCKET_PATH: /var/run/postgresql
+      PGBACKREST_PG1_USER: postgres
+      PGBACKREST_REPO1_TYPE: s3
+      PGBACKREST_REPO1_PATH: /pgbackrest
+      PGBACKREST_REPO1_S3_BUCKET: DB_BACKUP
+      PGBACKREST_REPO1_S3_ENDPOINT: minio:${MINIO_PORT:-6204}
+      PGBACKREST_REPO1_S3_REGION: ${MINIO_REGION:-us-east-1}
+      PGBACKREST_REPO1_S3_KEY: ${MINIO_ACCESS_KEY:-miniouser}
+      PGBACKREST_REPO1_S3_KEY_SECRET: ${MINIO_SECRET_KEY:-miniopassword}
+      PGBACKREST_REPO1_S3_URI_STYLE: path
+      PGBACKREST_REPO1_S3_VERIFY_TLS: ${PGBACKREST_REPO1_S3_VERIFY_TLS:-n}
+      PGBACKREST_REPO1_BUNDLE: y
+      PGBACKREST_REPO1_BUNDLE_SIZE: 1GiB
+      PGBACKREST_REPO1_COMPRESS_TYPE: zst
+      PGBACKREST_REPO1_COMPRESS_LEVEL: 9
+      PGBACKREST_REPO1_RETENTION_FULL_TYPE: time
+      PGBACKREST_REPO1_RETENTION_FULL: 30
+      PGBACKREST_REPO1_RETENTION_ARCHIVE_TYPE: time
+      PGBACKREST_REPO1_RETENTION_ARCHIVE: 30
     ports:
       - '${POSTGRES_PORT:-6201}:${POSTGRES_PORT:-6201}'
-    command: ["postgres", "-c", "port=${POSTGRES_PORT:-6201}"]
+    command:
+      [
+        "postgres",
+        "-c",
+        "port=${POSTGRES_PORT:-6201}",
+        "-c",
+        "archive_mode=on",
+        "-c",
+        "archive_timeout=60",
+        "-c",
+        "archive_command=pgbackrest --stanza=${PGBACKREST_STANZA:-my-ads} --repo1-cipher-type=aes-256-cbc --repo1-cipher-pass=Ghader archive-push %p"
+      ]
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - postgres_socket:/var/run/postgresql
+      - ./scripts/pgbackrest/postgres-entrypoint.sh:/usr/local/bin/pgbackrest-entrypoint.sh:ro
     <<: *default-extra-hosts
     networks:
       app_net:
@@ -135,6 +172,61 @@ services:
         ipv4_address: 172.30.0.16
     profiles:
       - full
+
+  pgbackrest-backup:
+    build:
+      context: ./backup
+      dockerfile: Dockerfile
+    environment:
+      TZ: ${BACKUP_TZ:-Asia/Tehran}
+      BACKUP_CRON: ${BACKUP_CRON:-0 2 * * *}
+      BACKUP_TELEGRAM_PHONES: ${BACKUP_TELEGRAM_PHONES:-+989038923989,+989195043739}
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: ${POSTGRES_PORT:-6201}
+      POSTGRES_DB: ${POSTGRES_DB:-my_ads}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      MINIO_ENDPOINT: minio
+      MINIO_PORT: ${MINIO_PORT:-6204}
+      MINIO_USE_SSL: ${MINIO_USE_SSL:-false}
+      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY:-miniouser}
+      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY:-miniopassword}
+      MINIO_REGION: ${MINIO_REGION:-us-east-1}
+      PGBACKREST_STANZA: ${PGBACKREST_STANZA:-my-ads}
+      PGBACKREST_PG1_PATH: /var/lib/postgresql/data
+      PGBACKREST_PG1_PORT: ${POSTGRES_PORT:-6201}
+      PGBACKREST_PG1_SOCKET_PATH: /var/run/postgresql
+      PGBACKREST_PG1_USER: ${POSTGRES_USER:-postgres}
+      PGBACKREST_REPO1_TYPE: s3
+      PGBACKREST_REPO1_PATH: /pgbackrest
+      PGBACKREST_REPO1_S3_BUCKET: DB_BACKUP
+      PGBACKREST_REPO1_S3_ENDPOINT: minio:${MINIO_PORT:-6204}
+      PGBACKREST_REPO1_S3_REGION: ${MINIO_REGION:-us-east-1}
+      PGBACKREST_REPO1_S3_KEY: ${MINIO_ACCESS_KEY:-miniouser}
+      PGBACKREST_REPO1_S3_KEY_SECRET: ${MINIO_SECRET_KEY:-miniopassword}
+      PGBACKREST_REPO1_S3_URI_STYLE: path
+      PGBACKREST_REPO1_S3_VERIFY_TLS: ${PGBACKREST_REPO1_S3_VERIFY_TLS:-n}
+      PGBACKREST_REPO1_BUNDLE: y
+      PGBACKREST_REPO1_BUNDLE_SIZE: 1GiB
+      PGBACKREST_REPO1_COMPRESS_TYPE: zst
+      PGBACKREST_REPO1_COMPRESS_LEVEL: 9
+      PGBACKREST_REPO1_RETENTION_FULL_TYPE: time
+      PGBACKREST_REPO1_RETENTION_FULL: 30
+      PGBACKREST_REPO1_RETENTION_ARCHIVE_TYPE: time
+      PGBACKREST_REPO1_RETENTION_ARCHIVE: 30
+    volumes:
+      - postgres_data:/var/lib/postgresql/data:ro
+      - postgres_socket:/var/run/postgresql
+    depends_on:
+      - postgres
+      - minio
+    <<: *default-extra-hosts
+    networks:
+      app_net:
+        ipv4_address: 172.30.0.18
+    profiles:
+      - backup
 
   tileserver:
     image: maptiler/tileserver-gl:v4.8.0
@@ -285,6 +377,7 @@ services:
 
 volumes:
   postgres_data:
+  postgres_socket:
   minio_data:
   loki_data:
   tempo_data:
