fix: add automated backup  2

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -42,7 +42,7 @@ services:
       PGBACKREST_PG1_USER: ${POSTGRES_USER}
       PGBACKREST_REPO1_TYPE: s3
       PGBACKREST_REPO1_PATH: /pgbackrest
-      PGBACKREST_REPO1_S3_BUCKET: DB_BACKUP
+      PGBACKREST_REPO1_S3_BUCKET: db-backup
       PGBACKREST_REPO1_S3_ENDPOINT: ${MINIO_ENDPOINT}:${MINIO_PORT}
       PGBACKREST_REPO1_S3_REGION: ${MINIO_REGION}
       PGBACKREST_REPO1_S3_KEY: ${MINIO_ACCESS_KEY:?MINIO_ACCESS_KEY not set}
@@ -100,7 +100,7 @@ services:
       PGBACKREST_PG1_USER: ${POSTGRES_USER}
       PGBACKREST_REPO1_TYPE: s3
       PGBACKREST_REPO1_PATH: /pgbackrest
-      PGBACKREST_REPO1_S3_BUCKET: DB_BACKUP
+      PGBACKREST_REPO1_S3_BUCKET: db-backup
       PGBACKREST_REPO1_S3_ENDPOINT: ${MINIO_ENDPOINT}:${MINIO_PORT}
       PGBACKREST_REPO1_S3_REGION: ${MINIO_REGION}
       PGBACKREST_REPO1_S3_KEY: ${MINIO_ACCESS_KEY:?MINIO_ACCESS_KEY not set}
