--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       PGBACKREST_PG1_USER: postgres
       PGBACKREST_REPO1_TYPE: s3
       PGBACKREST_REPO1_PATH: /pgbackrest
-      PGBACKREST_REPO1_S3_BUCKET: DB_BACKUP
+      PGBACKREST_REPO1_S3_BUCKET: db-backup
       PGBACKREST_REPO1_S3_ENDPOINT: minio:${MINIO_PORT:-6204}
       PGBACKREST_REPO1_S3_REGION: ${MINIO_REGION:-us-east-1}
       PGBACKREST_REPO1_S3_KEY: ${MINIO_ACCESS_KEY:-miniouser}
@@ -200,7 +200,7 @@ services:
       PGBACKREST_PG1_USER: ${POSTGRES_USER:-postgres}
       PGBACKREST_REPO1_TYPE: s3
       PGBACKREST_REPO1_PATH: /pgbackrest
-      PGBACKREST_REPO1_S3_BUCKET: DB_BACKUP
+      PGBACKREST_REPO1_S3_BUCKET: db-backup
       PGBACKREST_REPO1_S3_ENDPOINT: minio:${MINIO_PORT:-6204}
       PGBACKREST_REPO1_S3_REGION: ${MINIO_REGION:-us-east-1}
       PGBACKREST_REPO1_S3_KEY: ${MINIO_ACCESS_KEY:-miniouser}
