--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -383,7 +383,12 @@ services:
 
   loki:
     image: grafana/loki:2.9.3
-    command: ["-config.file=/etc/loki/local-config.yaml"]
+    command:
+      - "-config.file=/etc/loki/local-config.yaml"
+      - "-frontend.instance-addr=127.0.0.1"
+      - "-frontend.instance-port=9096"
+      - "-frontend.scheduler-address=127.0.0.1:9096"
+      - "-querier.scheduler-address=127.0.0.1:9096"
     volumes:
       - ./observability/loki-config.yaml:/etc/loki/local-config.yaml:ro
       - loki_data:/var/loki
