--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -197,6 +197,7 @@ services:
     image: ghcr.io/radiophp/my-ads-api:latest
     environment:
       NODE_ENV: production
+      ENABLE_CRON_JOBS: 'false'
       APP_HOST: 0.0.0.0
       APP_PORT: ${APP_PORT}
       APP_GLOBAL_PREFIX: ${APP_GLOBAL_PREFIX}
@@ -506,6 +507,7 @@ services:
       ]
     environment:
       NODE_ENV: production
+      ENABLE_CRON_JOBS: 'false'
       APP_HOST: 0.0.0.0
       APP_PORT: ${APP_PORT}
       APP_GLOBAL_PREFIX: ${APP_GLOBAL_PREFIX}
@@ -555,7 +557,7 @@ services:
       LOG_PRETTY: ${LOG_PRETTY}
       PRISMA_LOG_QUERIES: ${PRISMA_LOG_QUERIES}
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:?TELEGRAM_BOT_TOKEN not set}
-      TELEGRAM_BOT_AUTOSTART: ${TELEGRAM_BOT_AUTOSTART}
+      TELEGRAM_BOT_AUTOSTART: ${TELEGRAM_BOT_AUTOSTART:-true}
     depends_on:
       - postgres
       - redis
