chore: stop-first updates for cron and bot

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -70,6 +70,9 @@ services:
       - app_net
     deploy:
       <<: *deploy_defaults
+      update_config:
+        parallelism: 1
+        order: stop-first
       replicas: 1
       placement:
         constraints:
@@ -338,6 +341,9 @@ services:
       - app_net
     deploy:
       <<: *deploy_defaults
+      update_config:
+        parallelism: 1
+        order: stop-first
       replicas: ${API_CRON_REPLICAS}
 
   tileserver:
@@ -566,6 +572,9 @@ services:
       - app_net
     deploy:
       <<: *deploy_defaults
+      update_config:
+        parallelism: 1
+        order: stop-first
       replicas: ${TELEGRAM_BOT_REPLICAS}
       placement:
         constraints:
