--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -309,6 +309,7 @@ services:
       VAPID_PRIVATE_KEY: ${VAPID_PRIVATE_KEY}
       VAPID_SUBJECT: ${VAPID_SUBJECT}
       PUSH_NOTIFICATION_TIMEOUT_MS: ${PUSH_NOTIFICATION_TIMEOUT_MS}
+      NOTIFICATION_QUEUE_CONSUMER_ENABLED: 'false'
       MINIO_ENDPOINT: ${MINIO_ENDPOINT}
       MINIO_PORT: ${MINIO_PORT}
       MINIO_CONSOLE_PORT: ${MINIO_CONSOLE_PORT}
@@ -533,6 +534,7 @@ services:
       VAPID_PRIVATE_KEY: ${VAPID_PRIVATE_KEY}
       VAPID_SUBJECT: ${VAPID_SUBJECT}
       PUSH_NOTIFICATION_TIMEOUT_MS: ${PUSH_NOTIFICATION_TIMEOUT_MS}
+      NOTIFICATION_QUEUE_CONSUMER_ENABLED: 'false'
       JWT_ACCESS_TOKEN_SECRET: ${JWT_ACCESS_TOKEN_SECRET:?JWT_ACCESS_TOKEN_SECRET not set}
       JWT_REFRESH_TOKEN_SECRET: ${JWT_REFRESH_TOKEN_SECRET:?JWT_REFRESH_TOKEN_SECRET not set}
       JWT_ACCESS_TOKEN_TTL: ${JWT_ACCESS_TOKEN_TTL}
