fix: throttle telegram sends per chat

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -527,7 +527,7 @@ services:
       REDIS_KEY_PREFIX: ${REDIS_KEY_PREFIX}
       RABBITMQ_URL: ${RABBITMQ_URL}
       RABBITMQ_QUEUE_PREFIX: ${RABBITMQ_QUEUE_PREFIX}
-      RABBITMQ_PREFETCH: ${RABBITMQ_PREFETCH}
+      RABBITMQ_PREFETCH: ${TELEGRAM_BOT_PREFETCH:-1}
       RABBITMQ_HEARTBEAT: ${RABBITMQ_HEARTBEAT}
       RABBITMQ_RECONNECT_SECONDS: ${RABBITMQ_RECONNECT_SECONDS}
       VAPID_PUBLIC_KEY: ${VAPID_PUBLIC_KEY}
