fix: add telegram photo toggle

--- a/.env.prod
+++ b/.env.prod
@@ -85,6 +85,7 @@ PUSH_NOTIFICATION_TIMEOUT_MS=8000
 TELEGRAM_SEND_TIMEOUT_MS=8000
 TELEGRAM_SEND_RETRY_ATTEMPTS=5
 TELEGRAM_SEND_RETRY_DELAY_MS=5000
+TELEGRAM_SEND_PHOTOS=false
 
 # Image references are now fixed in docker-compose-prod.yml and always pull latest tags from GHCR.
 # Keep these here only as documentation / future overrides.
