--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -566,6 +566,7 @@ services:
       PRISMA_LOG_QUERIES: ${PRISMA_LOG_QUERIES}
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:?TELEGRAM_BOT_TOKEN not set}
       TELEGRAM_BOT_AUTOSTART: ${TELEGRAM_BOT_AUTOSTART:-true}
+      TELEGRAM_SEND_PHOTOS: ${TELEGRAM_SEND_PHOTOS:-false}
     depends_on:
       - postgres
       - redis
